# pharma-tokenizer-benchmark

./: .gitignore  LICENSE  README.md  benchmark.py  init_git.sh  pyproject.toml  requirements.txt  tokenizers.yaml
notebooks/: colab_demo.ipynb
sample_data/: jp_drugs.csv
